Fixed css to fill blog box correctly, scrollbar no longer contributes to page width, and personal project dropdown animates faster

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -87,22 +87,19 @@
 
 .blogCardContainer
 {
-  display: flex;
-  flex-wrap: wrap;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(33%, 1fr));
+  box-sizing: border-box;
 }
 
 .blogCard
 {
   background-color: rgba(255, 255, 255, 0.103);
-  width: 30%;
-  max-width: 50%;
-  height: auto;
+  width: auto;
   margin:10px;
   border-radius: var(--contentBorderRadii);
   box-sizing: border-box;
-  flex: 1 1 30%;
-  transition: box-shadow .3s ease-in-out; 
+  transition: box-shadow .3s ease-in-out;
 }
 
 .blogCard:hover
