--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body{
   background-color: var(--mainBackground);
 }
